# personal_rag

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PLAN_v_edges_view.md  README.md  debug_index.py  debug_query.py  package-lock.json  package.json  pyproject.toml  rag_tutorial.py  script.js  simple_debug.py  styles.css
.claude/: settings.local.json
.github/workflows/: security.yml
scripts/: check_dependency_age.py  probe_v_edges.py  refresh_uv_exclude_newer.py  run_pip_audit.sh
src/docdb/: __init__.py  cli.py  config.py  models.py
src/docdb/agent/: __init__.py  loop.py  toolbox.py
src/docdb/ingestion/: __init__.py  extractor.py  normalizer.py  parser.py  pipeline.py  store.py
src/docdb/llm/: __init__.py  base.py  client.py  fake.py  prompts.py
src/docdb/schema/: __init__.py  connection.py  schema.sql  seed.sql
src/docdb/search/: __init__.py  direct.py  entity_resolution.py  hybrid.py  sql_guard.py  text2sql.py
src/docdb/typing/: __init__.py  deterministic.py  dynamic_model.py  field_spec.py  registry.py
src/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  script.js  styles.css  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx
src/frontend/src/api/: client.ts  types.ts  useTypes.ts
src/frontend/src/components/: Badge.module.css  Badge.tsx  DynamicForm.module.css  DynamicForm.tsx  EmptyState.module.css  (+7 more)
src/server/: __init__.py  __main__.py  app.py  context.py  document_manager.py  index_manager.py  markdown_parser.py  rag_system.py  server.py  text_chunker.py  todo_manager.py
src/server/routes/: __init__.py  ask.py  documents.py  entities.py  health.py  ingest.py  relations.py  search.py  stats.py  todos.py  types.py
tests/: conftest.py  test_advanced_deduplication.py  test_creation_date_preservation.py  test_data_classes.py  test_document_manager.py  test_file_management.py  test_frontend.py  test_index_manager.py  test_markdown_parser.py  test_rag_system.py  test_server.py  test_text_chunker.py  test_todo_deduplication.py  test_todo_header_extraction.py  test_todo_manager.py  test_todo_rag_integration.py
tests/docdb/: conftest.py  fixtures.py  test_agent.py  test_cli.py  test_config.py  test_direct.py  test_dynamic_extraction.py  test_entity_resolution.py  test_extractor.py  test_field_spec.py  test_hybrid.py  test_llm.py  test_models.py  test_normalizer.py  test_parser.py  test_pipeline.py  test_property_graph_agent.py  test_registry.py  test_schema.py  test_sql_guard.py  test_store.py  test_text2sql.py  test_toolbox.py
tests/server/: conftest.py  test_routes.py  test_types_routes.py
(+20 files in other folders)
