[project]
name = "personal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "flask-cors>=6.0.1",
    "llama-index>=0.12.45",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-faiss>=0.4.0",
    "markdown-it-py>=3.0.0",
    "ollama>=0.5.1",
]
